# Autocurator-Synthetic-Data-Benchmark

./: .gitignore  BENCHMARKS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: example.yaml
data/: real.csv  synthetic.csv
outputs/runs/example_run/: metrics.json
reports/: example_run.html
scripts/: benchmark_generators.py
src/autocurator/: __init__.py  cli.py  config.py  datasets.py  generators.py  loaders.py  preprocess.py  report.py  viz.py
src/autocurator/metrics/: __init__.py  coverage.py  fidelity.py  privacy.py  utility.py
templates/: report.html
tests/: conftest.py  test_config.py  test_generator_sensitivity.py  test_generators_datasets.py  test_metrics.py  test_pipeline.py  test_reference_validation.py
