[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autocurator"
version = "0.1.0"
description = "Modular evaluation toolkit that benchmarks synthetic vs. real tabular data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "jinja2",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
]

[project.scripts]
autocurator = "autocurator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "UP"]

[tool.black]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
