[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "autocurator"
version = "0.1.0"
description = "Modular evaluation toolkit that benchmarks synthetic vs. real tabular data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.2",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "pytest-cov",
]

[project.scripts]
autocurator = "autocurator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autocurator = ["templates/*.html"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM", "UP"]

[tool.black]
line-length = 100

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
addopts = "--cov=autocurator --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]
